<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|start"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/Maintext1" />

        <EditText
            android:id="@+id/SumWithNDS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/Hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:gravity="bottom|start"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/Maintext2" />

        <EditText
            android:id="@+id/SumWithoutNDS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:hint="@string/Hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|start"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/Maintext3" />

        <EditText
            android:id="@+id/SumNDS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:hint="@string/Hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Maintext4"
            android:padding="15dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                app:simpleItems="@array/spinner_values" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.yandex.mobile.ads.banner.BannerAdView
            android:id="@+id/ad_container_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>